# KitsuneLauncher

./: .gitignore  INFO.md
backend/: app.py  requirements.txt
backend/kitsune/: __init__.py
backend/kitsune/accel/: __init__.py  version_rank.py
backend/kitsune/application/: __init__.py
backend/kitsune/application/contracts/: launcher_runtime.py
backend/kitsune/application/services/: launch_service.py
backend/kitsune/domain/: models.py
backend/kitsune/infrastructure/: __init__.py  minecraft_runtime.py
backend/tests/: test_launch_service.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html  package-lock.json  package.json
ui/src/: main.js  styles.css
