[package]
name = "kitsune-launcher"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.6", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
